# protocol

./: .env.example  .env.localhost  .env.localhost.example  .env.sepolia  .env.sepolia.example  .eslintignore  .gitignore  .gitmodules  .pnpmfile.cjs  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .solhint.json  .solhintignore  LICENSE  Makefile  README.md  codecov.yml  eslint.config.mjs  hardhat.config.ts  hardhat.slither.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: dependabot.yml
contracts/: ERC4626Whitelist.sol  FHEIntentsERC4626Vault.sol  InternalStatesOrchestrator.sol  LiquidityOrchestrator.sol  MarketOracle.sol  MockUSDC.sol  OracleRegistry.sol  OrionConfig.sol  OrionConfigUpgradeable.sol  OrionEncryptedVault.sol  OrionTransparentVault.sol  OrionVault.sol  OrionVaultFactory.sol  PriceAndPnLOracle.sol  README.md  UnderlyingAsset.sol  UniverseERC4626Vault.sol  VaultFactory.sol
python-sdk/: Makefile  README.md  pyproject.toml
python-sdk/python_sdk/: __init__.py  __main__.py  chain_interactions.py  cli.py  fhe.py  ipfs.py  upload_to_ipfs.py  utils.py  validation.py
reports/: gas-report.txt
rust-fhe/: Cargo.toml
rust-fhe/src/: ethereum.rs  lib.rs  main.rs
scripts/: add-to-config-whitelist.ts  advance-time.ts  build-dev-docs.sh  deploy-config.ts  deploy-curated-vault.ts  deploy-implementations.ts  deploy-internal-states-orchestrator.ts  deploy-investment-universe.ts  deploy-liquidity-orchestrator.ts  deploy-mock-usdc.ts  deploy-oracle-registry.ts  deploy-oracle.ts  deploy-oracles.ts  deploy-orion-vault-factory.ts  deploy-orion-vault.ts  deploy-underlying-asset.ts  deploy-vault.ts  deploy-whitelist.ts  deploy.ts  deposit-to-vault.ts  fund-local-accounts.ts  generate-fhe-keys.js  link-hardhat3-virtual-sources.mjs  localhost_deployer.sh  localhost_lps.sh  merge-hardhat3-build-info.mjs  mint-mock-usdc-to-lp.ts  mint-underlying-asset-to-lp.ts  populate-config.ts  populate-oracle-registry.ts  postprocess-docs.sh  (+17 more)
(+345 files in other folders)
