[package]
name = "rust-fhe"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
ethers = "2.0"
anyhow = "1.0"
dotenvy = "0.15"

[[bin]]
name = "fhe"
path = "src/main.rs"
